# KCLS-room-tracker

./: .gitignore  README.md  analyze.py  check_availability.py  probe_spaces.py  pyproject.toml  requirements.txt  scraper.py  validate_config.py
.github/workflows/: monitor.yml  validate-config.yml
data/bookings/: bookings.csv  last_run.json
data/reports/: heatmap.csv  lead_times.csv  report.md  saturday_windows.json  summary.json
