[project]
name = "kcls-room-tracker"
version = "0.1.0"
description = "Monitor KCLS meeting room availability via LibCal API"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
